Fixed: Nav items not centered when login button is in the rightmost part

--- a/components/Navbar/Navbar.css
+++ b/components/Navbar/Navbar.css
@@ -5,10 +5,6 @@
 .navbar-container-custom {
 	background-color: #000000;
 }
-.navbar-collapse-custom {
-	justify-content: center;
-	margin-right: auto;
-}
 .nav-link {
 	color: white;
 }
@@ -16,4 +12,11 @@
 	display: block;
 	width: 16vh;
 	height: 7vh;
+}
+.nav-login-custom {
+	margin-left: auto;
+}
+
+.nav-login-custom {
+	margin-left: auto;
 }
